--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-iot": "^3.465.0",
-    "aws-cdk-lib": "2.106.1",
+    "aws-cdk-lib": "^2.106.1",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
